<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>cn.wzw.llm.study</groupId>
	<artifactId>llmstudy</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>springai</module>
		<module>langchain4j</module>
		<module>functioncall</module>
		<module>rag</module>
		<module>pro-rag</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.ai</groupId>
				<artifactId>spring-ai-bom</artifactId>
				<version>${spring-ai.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>com.alibaba.cloud.ai</groupId>
				<artifactId>spring-ai-alibaba-extensions-bom</artifactId>
				<version>${spring-ai-alibaba.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>${mysql-connector-java.version}</version>
			</dependency>

			<dependency>
				<groupId>co.elastic.clients</groupId>
				<artifactId>elasticsearch-java</artifactId>
				<version>${elasticsearch-java.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-compress</artifactId>
				<version>${commons-compress.version}</version>
			</dependency>

			<dependency>
				<groupId>com.alibaba.fastjson2</groupId>
				<artifactId>fastjson2</artifactId>
				<version>${fastjson2.version}</version>
			</dependency>

			<dependency>
				<groupId>dev.langchain4j</groupId>
				<artifactId>langchain4j</artifactId>
				<version>${langchain4j.version}</version>
			</dependency>

			<dependency>
				<groupId>dev.langchain4j</groupId>
				<artifactId>langchain4j-open-ai-spring-boot-starter</artifactId>
				<version>${langchain4j-spring-boot.version}</version>
			</dependency>

			<dependency>
				<groupId>dev.langchain4j</groupId>
				<artifactId>langchain4j-spring-boot-starter</artifactId>
				<version>${langchain4j-spring-boot.version}</version>
			</dependency>

			<dependency>
				<groupId>dev.langchain4j</groupId>
				<artifactId>langchain4j-reactor</artifactId>
				<version>${langchain4j-spring-boot.version}</version>
			</dependency>

			<dependency>
				<groupId>dev.langchain4j</groupId>
				<artifactId>langchain4j-document-parser-apache-tika</artifactId>
				<version>${langchain4j-document-parser.version}</version>
			</dependency>

			<dependency>
				<groupId>dev.langchain4j</groupId>
				<artifactId>langchain4j-web-search-engine-tavily</artifactId>
				<version>${langchain4j-spring-boot.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<properties>
		<java.version>21</java.version>
		<spring-ai.version>1.1.1</spring-ai.version>
		<spring-ai-alibaba.version>1.1.0.0-RC1</spring-ai-alibaba.version>
		<mysql-connector-java.version>8.0.33</mysql-connector-java.version>
		<elasticsearch-java.version>8.19.10</elasticsearch-java.version>
		<commons-compress.version>1.28.0</commons-compress.version>
		<fastjson2.version>2.0.60</fastjson2.version>
		<langchain4j.version>1.8.0</langchain4j.version>
		<langchain4j-spring-boot.version>1.8.0-beta15</langchain4j-spring-boot.version>
		<langchain4j-document-parser.version>1.10.0-beta18</langchain4j-document-parser.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
